--- a/pages/me/me.html
+++ b/pages/me/me.html
@@ -76,30 +76,34 @@
 <!-- 个人主页的设置 -->
     <ul class="sy_settimg_box">
         <li class="sy_setting_li">
-            <div class="sy_set_leftimg">
-                <img src="images/sy_images/sy_item01.png" alt="">
-            </div>
-            <div class="sy_set_conbox">
-                <p class="sy_set_top">充值</p>
-                <div class="sy_set_border"></div>
-                <p class="sy_set_bottom">现在充值阅读币送免费会员一周</p>
-            </div>
-            <div class="sy_setright">
-                <div class="sy_setrght_con"><a href="#/recharge"><img src="images/sy_images/sy_item07.png" alt=""></a></div>
-            </div>
+            <a href="#/recharge" class="ld_blocka">
+                <div class="sy_set_leftimg">
+                    <img src="images/sy_images/sy_item01.png" alt="">
+                </div>
+                <div class="sy_set_conbox">
+                    <p class="sy_set_top">充值</p>
+                    <div class="sy_set_border"></div>
+                    <p class="sy_set_bottom">现在充值阅读币送免费会员一周</p>
+                </div>
+                <div class="sy_setright">
+                    <div class="sy_setrght_con"><img src="images/sy_images/sy_item07.png" alt=""></div>
+                </div>
+            </a>
         </li>
         <li class="sy_setting_li">
-            <div class="sy_set_leftimg">
-                <img src="images/sy_images/sy_item02.png" alt="">
-            </div>
-            <div class="sy_set_conbox">
-                <p class="sy_set_top">个人编辑</p>
-                <div class="sy_set_border"></div>
-                <p class="sy_set_bottom">编辑个人资料</p>
-            </div>
-            <div class="sy_setright">
-                <div class="sy_setrght_con"><a href="#/yhp_permess"><img src="images/sy_images/sy_item07.png" alt=""></a>  </div>
-            </div>
+            <a href="#/yhp_permess" class="ld_blocka">
+                <div class="sy_set_leftimg">
+                    <img src="images/sy_images/sy_item02.png" alt="">
+                </div>
+                <div class="sy_set_conbox">
+                    <p class="sy_set_top">个人编辑</p>
+                    <div class="sy_set_border"></div>
+                    <p class="sy_set_bottom">编辑个人资料</p>
+                </div>
+                <div class="sy_setright">
+                    <div class="sy_setrght_con"><img src="images/sy_images/sy_item07.png" alt=""></div>
+                </div>
+            </a>
         </li>
         <li class="sy_setting_li">
             <div class="sy_set_leftimg">
@@ -130,17 +134,19 @@
             </div>
         </li>
         <li class="sy_setting_li">
-            <div class="sy_set_leftimg">
-                <img src="images/sy_images/sy_item05.png" alt="">
-            </div>
-            <div class="sy_set_conbox">
-                <p class="sy_set_top">会员中心</p>
-                <div class="sy_set_border"></div>
-                <p class="sy_set_bottom">会员畅销全部书籍，免费阅读</p>
-            </div>
-            <div class="sy_setright">
-                <div class="sy_setrght_con"> <a href="#/yhp_member"><img src="images/sy_images/sy_item07.png" alt=""></a> </div>
-            </div>
+            <a href="#/yhp_member" class="ld_blocka">
+                <div class="sy_set_leftimg">
+                    <img src="images/sy_images/sy_item05.png" alt="">
+                </div>
+                <div class="sy_set_conbox">
+                    <p class="sy_set_top">会员中心</p>
+                    <div class="sy_set_border"></div>
+                    <p class="sy_set_bottom">会员畅销全部书籍，免费阅读</p>
+                </div>
+                <div class="sy_setright">
+                    <div class="sy_setrght_con"><img src="images/sy_images/sy_item07.png" alt=""></div>
+                </div>
+            </a>
         </li>
     </ul>
 <!-- 退出登录 -->
